# smith

./: .gitignore  AGENTS.md  Cargo.toml  README.md  agent-process-split.md
.cargo/: config.toml
.forgejo/workflows/: ci.yml
crates/smith-agent/: Cargo.toml
crates/smith-agent-protocol/: Cargo.toml
crates/smith-agent-protocol/src/: lib.rs
crates/smith-agent/src/: lib.rs  machine.rs  machine_tests.rs  run.rs  shell.rs  subagent_tool.rs
crates/smith-agent/tests/: agent_machine_sim.rs  jig_sub_agent.rs  jig_subagent_tool.rs
crates/smith-io-engine/: Cargo.toml
crates/smith-io-engine/src/: engine.rs  http_client.rs  lib.rs  machine.rs  queue.rs  runtime.rs  timer.rs
crates/smith-io-engine/tests/: lab_smoke.rs  lab_spawn_probe.rs
crates/smith-temper-agent/: Cargo.toml
crates/smith-temper-agent-cli/: Cargo.toml
crates/smith-temper-agent-cli/src/: main.rs
crates/smith-temper-agent-cli/tests/: basic_delivery_jig_e2e.rs  coding_agent_e2e.rs  forgejo_workflow_role_e2e.rs  version_command.rs
crates/smith-temper-agent-cli/tests/forgejo_workflow_role_e2e/: observability.rs
crates/smith-temper-agent/fixtures/interaction-profiles/: product-manager.json  support-agent.json
crates/smith-temper-agent/fixtures/interaction-profiles/prompts/: support_agent.md
crates/smith-temper-agent/src/: coding_agent.rs  coding_agent_tests.rs  decision.rs  interaction_profile.rs  interaction_profile_config.rs  interaction_profile_tests.rs  lib.rs  observability.rs  product_manager.rs  prompt_overlays.rs  prompt_overlays_tests.rs  provider.rs  provider_tests.rs  workflow_role_decision.rs  workflow_role_decision_capture.rs  workflow_role_decision_capture_tests.rs  workflow_role_decision_observability.rs  workflow_role_decision_tests.rs
crates/smith-temper-agent/src/prompts/: product_manager.md
crates/smith-temper-agent/src/provider/: anthropic_oauth.rs  oauth.rs
crates/smith-temper-agent/tests/: anthropic_oauth_live.rs  chatgpt_oauth_live.rs  jig_coding_agent.rs  jig_decision.rs  jig_foundation.rs  jig_request_oracle.rs
crates/smith-temper-agent/tests/fixtures/: jig_auth.json
crates/smith-temper-agent/tests/support/: workflow_role_fixture.rs
crates/smith-worker/: Cargo.toml
crates/smith-worker/src/: agent_runner.rs  client.rs  coding_executor.rs  config.rs  executor.rs  external_command_runner.rs  lib.rs  observability.rs  out_of_process_runner.rs  pi_agent_runner.rs  progress_relay.rs  run.rs  worker_machine.rs  worker_machine_tests.rs  worker_shell.rs  workspace.rs
crates/smith-worker/tests/: coding_executor.rs  coding_worker_e2e.rs  fake_daemon.rs  worker_machine_sim.rs  workspace.rs
crates/smith-worker/tests/support/: smith_fake_agent.rs
deploy/: README.md  install.sh
deploy/config/: smith.env
deploy/config/prompts/: architect.md  engineer.md
deploy/config/secrets/: .gitignore  README.md  roles.env.example
deploy/systemd/: smith-architect.service  smith-delivery.target  smith-engineer.service  smith-mechanical.service  smith-trigger.service  smith-worker.service
docs/: README.md
docs/adr/: 0001-documentation-architecture.md  0002-temper-process-boundary.md  0003-chatgpt-oauth-agent-auth.md  README.md
docs/explanation/: README.md  agent-process-split.md  codebase-map.md  process-boundary.md  smith-split-history.md
docs/how-to/: README.md  configure-provider-auth.md  end-a-development-session.md  fast-local-iteration.md  provision-smith-dogfood.md  record-agent-lesson.md  run-live-provider-tests.md  run-local-delivery.md  run-temper-responders.md  start-a-development-session.md
docs/reference/: README.md  coding-agent-prompts.md  development-conventions.md  process-responders.md  provider-auth.md  split-coverage.md  testing.md  workflow-role-observability.md
docs/reference/agent-lessons/: 0001-pin-pi-sdk-transitive-deps.md  0002-chatgpt-oauth-shared-auth-dual-schema.md  0003-anthropic-oauth-requires-claude-code-system-block.md  README.md  template.md
docs/tutorials/: README.md
examples/basic-delivery/: .gitignore  README.md  run.sh
examples/basic-delivery/config/: ci.yml  temper.env  workflow.json
examples/basic-delivery/secrets/: .env.example  .gitignore
examples/basic-delivery/tools/: greeting-coder.sh  greeting-role-decision.sh
examples/checkpoint-live/: README.md  run.sh
examples/dogfood/: README.md  run.sh
examples/dogfood/config/: ci.yml  dogfood.env
examples/dogfood/config/interaction-profiles/: product-manager.json
examples/dogfood/tools/: configure_forgejo.py  dogfood_tools_test.py  label_intake.py  mint_admin_token.py  parse_secrets.py  preflight.py  preflight_test.py  test_configure_forgejo.py  test_interaction_profile.py  test_label_intake.py  test_parse_secrets.py  write_interaction_bindings.py
examples/multi-repo-delivery/: README.md  run.sh
examples/multi-repo-delivery-with-coordinated-ci/: README.md  run.sh
examples/reference-delivery/: .gitignore  README.md  observability.md  run.sh
examples/reference-delivery/config/: ci.yml  intake-issue.md  temper.env  workflow.json
examples/reference-delivery/secrets/: .env.example
examples/reference-delivery/tools/: greeting-coder.sh
plans/observability/: README.md
