[package]
name = "smith-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Sans-IO LLM agent loop for Smith: a pure AgentMachine driven by an asupersync shell that reuses pi-SDK providers and tools."

[dependencies]
asupersync.workspace = true
futures = "0.3"
pi_agent_rust.workspace = true
serde.workspace = true
serde_json.workspace = true
smith-io-engine = { path = "../smith-io-engine" }

[dev-dependencies]
smith-io-engine = { path = "../smith-io-engine" }
smith-temper-agent = { path = "../smith-temper-agent", features = ["test-provider-base-url-override"] }
jig-server = { path = "../../../jig/crates/jig-server" }
jig-core = { path = "../../../jig/crates/jig-core" }

[lints]
workspace = true
