[package]
name = "smith-temper-agent-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Small Smith utility binaries for Temper agent provider setup."

[dependencies]
serde_json.workspace = true
smith-temper-agent = { path = "../smith-temper-agent" }
temper-interaction = { path = "../../../temper/crates/temper-interaction" }
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
async-trait.workspace = true
temper-forge = { path = "../../../temper/crates/temper-forge" }
temper-forge-forgejo = { path = "../../../temper/crates/temper-forge-forgejo" }
temper-runner = { path = "../../../temper/crates/temper-runner" }
temper-testing = { path = "../../../temper/crates/temper-testing" }
temper-workflow = { path = "../../../temper/crates/temper-workflow" }

[lints]
workspace = true
