[package]
name = "smith-temper-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Temper-specific provider/auth/decision core for Smith agents."

[dependencies]
pi_agent_rust.workspace = true
serde.workspace = true
serde_json.workspace = true
temper-process-protocol = { path = "../../../temper/crates/temper-process-protocol" }
uuid.workspace = true

[features]
default = []
test-base-url-override = []

[dev-dependencies]
smith-temper-agent = { path = ".", features = ["test-base-url-override"] }
jig-server = { path = "../../../jig/crates/jig-server" }
jig-core = { path = "../../../jig/crates/jig-core" }
temper-interaction = { path = "../../../temper/crates/temper-interaction" }
temper-workflow = { path = "../../../temper/crates/temper-workflow" }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[lints]
workspace = true
