[package]
name = "smith-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Smith worker process: long-polls a Temper daemon and runs role/coding jobs. Speaks only the worker/daemon wire protocol; never calls the Forge API."

[dependencies]
temper-worker-protocol = { path = "../../../temper/crates/temper-worker-protocol" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "process"] }

[dev-dependencies]
axum = "0.8"
tempfile = "3"
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "net", "process"] }

[lints]
workspace = true
