[package]
name = "smith-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Smith worker process: long-polls a Temper daemon and runs role/coding jobs. Speaks only the worker/daemon wire protocol; never calls the Forge API."

[dependencies]
asupersync.workspace = true
smith-io-engine = { path = "../smith-io-engine" }
smith-temper-agent = { path = "../smith-temper-agent" }
temper-worker-protocol = { path = "../../../temper/crates/temper-worker-protocol" }
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
thiserror = "2"
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "process"] }

[dev-dependencies]
axum = "0.8"
smith-io-engine = { path = "../smith-io-engine" }
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "net", "process"] }

[lints]
workspace = true
